_sass/_base.scss
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  background-color: #DADAD9;
}

h1, h2, h3, h4 {
  font-family: 'PT Sans', sans-serif;
  font-weight: normal;
  margin: .3em 0;
}

h1 { font-size: 2.6em; text-align: center; }
h2 { font-size: 1.75em; }
h3 { font-size: 1.57em; }
h4 { font-size: 1.31em; }

p {
  line-height: 1.8em;
  margin: 0 0 1.75em;
}

ul {
  margin: 0 0 1.75em;
}

ul ul, ol ol {
  margin-top: .6em;
}

li {
  line-height: 1.4em;
  margin-bottom: 0.5em;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

img { max-width: 100%; }

figure {
  text-align: center;
}

figcaption {
  color: #aaa;
  font-size: .8em;
  margin: .5em 0;
}

pre.highlight {
  margin: 0 0 1.75em;
}

.page-wrapper {
  box-sizing: border-box;
  max-width: 840px;
  margin: 0 auto;
  background-color: #fafafa;
  border-radius: 3px;
  color: #36382E;
  padding: 1em 2.5em;
}

